--- a/pom.xml
+++ b/pom.xml
@@ -93,4 +93,15 @@
 		</profile>
 	</profiles>
 
+	<repositories>
+		<repository>
+			<id>spring-snapshots</id>
+			<name>Spring Snapshots</name>
+			<url>https://repo.spring.io/snapshot</url>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+		</repository>
+	</repositories>
+
 </project>
