--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
-logging.level.org.springframework.context.support.DefaultLifecycleProcessor=debug
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.database=postgresql
+spring.datasource.url=${POSTGRES_URL:jdbc:postgresql://localhost/cashcard}
+spring.datasource.username=${POSTGRES_USER:cashcard}
+spring.datasource.password=${POSTGRES_PASS:cashcard}
 spring.main.cloud-platform=kubernetes
