--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 	<properties>
 		<java.version>17</java.version>
 		<jakarta-servlet.version>5.0.0</jakarta-servlet.version>
-		<spring-framework.version>6.1.0-SNAPSHOT</spring-framework.version>
+		<spring-framework.version>6.1.0-M1</spring-framework.version>
 	</properties>
 
 	<dependencies>
@@ -99,12 +99,9 @@
 
 	<repositories>
 		<repository>
-			<id>spring-snapshots</id>
-			<name>Spring Snapshots</name>
-			<url>https://repo.spring.io/snapshot</url>
-			<releases>
-				<enabled>false</enabled>
-			</releases>
+			<id>spring-milestones</id>
+			<name>Spring Milestones</name>
+			<url>https://repo.spring.io/milestone</url>
 		</repository>
 	</repositories>
 
