Add JPA support

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 logging.level.org.springframework.context.support.DefaultLifecycleProcessor=debug
 spring.main.cloud-platform=kubernetes
+spring.datasource.hikari.allow-pool-suspension=true
+spring.datasource.url=jdbc:postgresql://localhost/cashcard
+spring.datasource.username=cashcard
+spring.datasource.password=cashcard
