--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.2.0-M1</version>
+		<version>3.2.0-M2</version>
 		<relativePath/>
 		<!-- lookup parent from repository -->
 	</parent>
@@ -19,13 +19,14 @@
 
 	<properties>
 		<java.version>17</java.version>
+		<spring-framework.version>6.1.0-SNAPSHOT</spring-framework.version>
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.crac</groupId>
 			<artifactId>crac</artifactId>
-			<version>1.3.0</version>
+			<version>1.4.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -60,6 +61,17 @@
 			<id>spring-milestones</id>
 			<name>Spring Milestones</name>
 			<url>https://repo.spring.io/milestone</url>
+		</repository>
+		<repository>
+			<id>spring-snapshots</id>
+			<name>Spring Snapshots</name>
+			<url>https://repo.spring.io/snapshot</url>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
 		</repository>
 	</repositories>
 
